# zenodo-uploader

./: README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
src/zenodo_uploader/: __init__.py  cli.py
