# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
# The name of your package on PyPI. It must be unique.
name = "zenodo-uploader"
version = "0.1.3"
authors = [
  { name="Lei Wang", email="wanglei94@hust.edu.cn" },
]
description = "A command-line tool and library to upload files to Zenodo."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT License" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Archiving",
]
dependencies = [
    "requests",
    "toml",
    "tqdm",
]

[project.scripts]
zenodo-upload = "zenodo_uploader.cli:main"

[project.urls]
Homepage = "https://github.com/wangleiofficial/zenodo-uploader" # Replace with your repo URL
Issues = "https://github.com/wangleiofficial/zenodo-uploader/issues"